refactor: optimize device registration - bulk update, remove unused imports and redundant logic